--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: BY Blog
-SEOTitle: 白玉京的博客 | BY Blog
+title: Star Blog
+SEOTitle: Ali的博客 | Wxx Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: Anguswxx@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+keyword: "极客, wxx Blog, Ali的博客, 小白, 科技, iOS, 微软, Google"
+url: "http://woaixuexibiancheng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
