--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Star Blog
 SEOTitle: Ali的博客 | Wxx Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/100003.jpg
 email: Anguswxx@gmail.com
 description: "Every failure is leading towards success."
 keyword: "极客, wxx Blog, Ali的博客, 小白, 科技, iOS, 微软, Google"
