--- a/_config.yml
+++ b/_config.yml
@@ -57,14 +57,14 @@ kramdown:
 
 # 评论系统
  Disqus（https://disqus.com/）
- disqus_username: angusunnl
+ disqus_username: zxhuahai
 
 # Gitalk
 #gitalk:
   #enable: true    #是否开启Gitalk评论
- # clientID: f2c84e7629bb1446c1a4                            #生成的clientID
+  #clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   #clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
- # repo: woaixuexibiancheng.github.io    #仓库名称
+  #repo: woaixuexibiancheng.github.io    #仓库名称
  # owner: woaixuexibiancheng    #github用户名
  # admin: woaixuexibiancheng
  # distractionFreeMode: true #是否启用类似FB的阴影遮罩
