--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Star Blog
-SEOTitle: Ali的博客 | Wxx Blog
+SEOTitle: 吴羡的博客 | Wx Blog
 header-img: img/100003.jpg
 email: Anguswxx@gmail.com
 description: "Every failure is leading towards success."
